# workyterm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  cache.rs  config.rs  error.rs  main.rs
src/llm/: council.rs  mod.rs  provider.rs
src/team/: analyzer.rs  members.rs  mod.rs  workflow.rs
src/ui/: mod.rs  office.rs  widgets.rs
src/workers/: animations.rs  mod.rs  sprites.rs
tests/: integration_test.rs
