[package]
name = "workyterm"
version = "0.1.0"
edition = "2021"
description = "A friendly CLI for non-programmers with animated pixel art AI workers"
authors = ["Marc Shade <marc@2acrestudios.com>"]
license = "MIT"
repository = "https://github.com/marc-shade/workyterm"
keywords = ["cli", "tui", "ai", "llm", "ratatui"]
categories = ["command-line-interface", "text-processing"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP Client for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream"] }

# JSON/Config handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system and directories
dirs = "5.0"

# Unicode and text handling
unicode-width = "0.2"

# Random for animations
rand = "0.8"

# Time handling
chrono = "0.4"

# Clipboard support
arboard = "3.4"

# Async traits
async-trait = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
