[package]
name = "workyterm"
version = "0.2.0"
edition = "2021"
description = "Claude Code style CLI assistant with dynamic AI support team"
authors = ["Marc Shade <marc@2acrestudios.com>"]
license = "MIT"
repository = "https://github.com/marc-shade/workyterm"
keywords = ["cli", "ai", "llm", "assistant", "support"]
categories = ["command-line-interface", "text-processing"]

[dependencies]
# Async Runtime
tokio = { version = "1.42", features = ["full", "process"] }

# HTTP Client for LLM APIs
reqwest = { version = "0.12", features = ["json"] }

# JSON/Config handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File system and directories
dirs = "5.0"

# Async traits
async-trait = "0.1"

# Terminal colors (Claude Code style)
colored = "2.1"

# Regex for file reference parsing
regex = "1.11"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
